# clinical-rag-agent

./: .gitignore  README.md  pyproject.toml  run_server.py
app/: main.py  qdrant_manager.py  rag_pipeline.py
app/templates/: index.html
scripts/: continuous_ingestion_pipeline.py  data_preperation.py  ingest_rag_files.py
