[project]
name = "clinical-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.116.1",
    "hf-xet>=1.1.10",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langchain-qdrant>=0.2.1",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "safetensors>=0.6.2",
    "sentence-transformers>=5.1.0",
    "striprtf>=0.0.29",
    "transformers>=4.56.1",
    "unicorn>=2.1.4",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
